--- a/forcing/atmosphere/monthly_CESM_forcing.ipynb
+++ b/forcing/atmosphere/monthly_CESM_forcing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,19 +117,19 @@
     "    \n",
     "    # variables\n",
     "    fine_dust             = ncd.createVariable('fdust', 'float64', ('y','x'))\n",
-    "    fine_dust.units       = 'g/m2/s'\n",
+    "    fine_dust.units       = 'kg/m2/s'\n",
     "    fine_dust.long_name   = 'Fine dust deposition flux'  \n",
     "    fine_dust.coordinates = 'nav_lon nav_lat'\n",
     "    fine_dust[:]          = field1\n",
     "    \n",
     "    coarse_dust             = ncd.createVariable('cdust', 'float64', ('y','x'))\n",
-    "    coarse_dust.units       = 'g/m2/s'\n",
+    "    coarse_dust.units       = 'kg/m2/s'\n",
     "    coarse_dust.long_name   = 'Coarse dust deposition flux'  \n",
     "    coarse_dust.coordinates = 'nav_lon nav_lat'\n",
     "    coarse_dust[:]          = field2\n",
     "    \n",
     "    black_c             = ncd.createVariable('bc', 'float64', ('y','x'))\n",
-    "    black_c.units       = 'g/m2/s'\n",
+    "    black_c.units       = 'kg/m2/s'\n",
     "    black_c.long_name   = 'Black carbon deposition flux'  \n",
     "    black_c.coordinates = 'nav_lon nav_lat'\n",
     "    black_c[:]          = field3\n",
@@ -155,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_year = 2020"
+    "file_year = 2003"
    ]
   },
   {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,34 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<class 'netCDF4._netCDF4.Variable'>\n",
-       "float32 dst_a1DDF(time, lat, lon)\n",
-       "    long_name: dst_a1 dry deposition flux at bottom (grav + turb)\n",
-       "    units: kg/m2/s\n",
-       "    cell_methods: time: mean\n",
-       "unlimited dimensions: time\n",
-       "current shape = (2772, 192, 288)\n",
-       "filling off"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dst_a1DDF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,15 +259,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start index:  2039\n",
-      "end index:  2050\n"
+      "start index:  1835\n",
+      "end index:  1846\n"
      ]
     }
    ],
@@ -314,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20200101 20201201\n"
+      "20030101 20031201\n"
      ]
     }
    ],
@@ -338,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,26 +339,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Convert kg/m2/s to g/m2/s"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dst_a1 = np.add(dst_a1DDF[start_index:end_index+1,:,:]*10**3, dst_a1SFWET[start_index:end_index+1, :,:]*10**3)\n",
-    "dst_a3 = np.add(dst_a3DDF[start_index:end_index+1,:,:]*10**3, dst_a3SFWET[start_index:end_index+1, :,:]*10**3)\n",
-    "bc_a1 = np.add(BC_a1DDF[start_index:end_index+1,:,:]*10**3, BC_a1SFWET[start_index:end_index+1, :,:]*10**3)"
+    "dst_a1 = np.add(dst_a1DDF[start_index:end_index+1,:,:], dst_a1SFWET[start_index:end_index+1, :,:])\n",
+    "dst_a3 = np.add(dst_a3DDF[start_index:end_index+1,:,:], dst_a3SFWET[start_index:end_index+1, :,:])\n",
+    "bc_a1 = np.add(BC_a1DDF[start_index:end_index+1,:,:], BC_a1SFWET[start_index:end_index+1, :,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -421,14 +387,14 @@
      "output_type": "stream",
      "text": [
       "dust a1:\n",
-      "6.392681e-07\n",
-      "5.5163804e-16\n",
+      "4.488211e-10\n",
+      "1.6621486e-18\n",
       "dust a3:\n",
-      "0.00016161492\n",
-      "2.5886011e-14\n",
+      "1.09318734e-07\n",
+      "8.1946004e-17\n",
       "bc a1:\n",
-      "6.8735084e-09\n",
-      "9.667789e-17\n"
+      "5.9891723e-12\n",
+      "2.864976e-19\n"
      ]
     }
    ],
@@ -446,19 +412,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2.3034583e-07, 1.5261969e-07, 2.7154806e-07, 3.1336324e-07,\n",
-       "       5.3917194e-07, 2.5864054e-07, 6.3926808e-07, 4.8569592e-07,\n",
-       "       3.7108020e-07, 3.0481129e-07, 3.9662638e-07, 1.8255470e-07],\n",
+       "array([1.9439532e-10, 4.1308970e-10, 2.2127122e-10, 2.9613889e-10,\n",
+       "       4.4882109e-10, 4.3642959e-10, 3.5643369e-10, 4.1369538e-10,\n",
+       "       2.7252320e-10, 1.4773312e-10, 2.3566088e-10, 2.4992339e-10],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,19 +435,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5.0447245e-05, 3.3909837e-05, 7.0941474e-05, 8.1537502e-05,\n",
-       "       1.0428420e-04, 6.3827574e-05, 1.6161492e-04, 8.9263507e-05,\n",
-       "       9.1574293e-05, 7.3426243e-05, 1.0336056e-04, 4.8311060e-05],\n",
+       "array([3.24691349e-08, 6.90021551e-08, 1.11697375e-07, 1.08489886e-07,\n",
+       "       1.38718320e-07, 9.76676944e-08, 1.33927514e-07, 7.23125382e-08,\n",
+       "       7.19768991e-08, 8.49858779e-08, 4.68153836e-08, 5.45303394e-08],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1133,6 +1099,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imin, imax = 1480, 2180\n",
+    "jmin, jmax = 160, 800\n",
+    "isize, jsize = imax-imin, jmax-jmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NCAR dust flux from the atmosphere forcing field -----\n",
+      "Maximum value:  6.920133094369833e-14\n",
+      "Minimum value:  3.2082860055005834e-15\n",
+      "Average value:  1.3196619323488464e-14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('NCAR dust flux from the atmosphere forcing field -----')\n",
+    "print('Maximum value: ', np.amax(interp_dst_a1[0,imin:imax,jmin:jmax]+interp_dst_a3[0,imin:imax,jmin:jmax]))\n",
+    "print('Minimum value: ', np.amin(interp_dst_a1[0,imin:imax,jmin:jmax]+interp_dst_a3[0,imin:imax,jmin:jmax]))\n",
+    "print('Average value: ', np.average(interp_dst_a1[0,imin:imax,jmin:jmax]+interp_dst_a3[0,imin:imax,jmin:jmax]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1141,34 +1141,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "location = '/data/brogalla/atmospheric_forcing/'"
+    "location = '/ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m01.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m02.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m03.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m04.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m05.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m06.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m07.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m08.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m09.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m10.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m11.nc\n",
-      "saved  /data/brogalla/atmospheric_forcing/atm_flux_y2020m12.nc\n"
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m01.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m02.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m03.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m04.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m05.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m06.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m07.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m08.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m09.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m10.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m11.nc\n",
+      "saved  /ocean/brogalla/GEOTRACES/data/paper1-forcing-files/atmospheric/atm_flux_y2003m12.nc\n"
      ]
     }
    ],
