--- a/forcing/ice/solar-flux-ice.ipynb
+++ b/forcing/ice/solar-flux-ice.ipynb
@@ -567,12 +567,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a     = nc.Dataset('/data/brogalla/ANHA12/ANHA12-EXH006_5d_gridT_y2015m01d05.nc')\n",
+    "a     = nc.Dataset('/data/brogalla/ANHA12/ANHA12-EXH006_5d_gridT_y2002m08d23.nc')\n",
     "turbo = np.array(a.variables['sohmld']) # turbocline depth in meters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "turbo_m = np.ma.masked_where(tmask[0,:,:] < 0.1, turbo[0,imin:imax,jmin:jmax])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "38.80514\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.ma.amin(turbo_m))\n",
+    "print(np.ma.amax(turbo_m))"
    ]
   },
   {
