--- a/forcing/rivers/apply_concentrations_to_classification.ipynb
+++ b/forcing/rivers/apply_concentrations_to_classification.ipynb
@@ -31,9 +31,7 @@
     "\n",
     "1. Glaciers\n",
     "2. Continental\n",
-    "3. Other\n",
-    "\n",
-    "Load river classification file: river_class_201807.nc"
+    "3. Other"
    ]
   },
   {
@@ -42,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rclass = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river_class_201912.nc','r')\n",
+    "rclass = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river_class-202005.nc','r')\n",
     "river_class = rclass.variables['rclass']\n",
     "river_class = np.array(river_class)"
    ]
@@ -68,9 +66,22 @@
    "outputs": [],
    "source": [
     "pMn_rivers = np.zeros(river_class.shape)\n",
+    "SPM_rivers = np.zeros(river_class.shape)\n",
     "dMn_rivers = np.zeros(river_class.shape)\n",
     "pPb_rivers = np.zeros(river_class.shape)\n",
     "dPb_rivers = np.zeros(river_class.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiplication_factor_glacial     = 1\n",
+    "multiplication_factor_continental = 1\n",
+    "\n",
+    "SPM_factor = 0.35"
    ]
   },
   {
@@ -82,24 +93,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pMn_rivers[river_class==1.0] = 151 # glaciers\n",
-    "pMn_rivers[river_class==2.0] = 13  # continental\n",
-    "pMn_rivers[river_class==3.0] = 2   # other"
+    "dMn_rivers[river_class==1.0] = 164*multiplication_factor_glacial # glaciers\n",
+    "dMn_rivers[river_class==2.0] = 30*multiplication_factor_continental  # continental\n",
+    "dMn_rivers[river_class==3.0] = 5   # other\n",
+    "dMn_rivers[river_class==4.0] = 5   # Gulf of Boothia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dMn_rivers[river_class==1.0] = 164 # glaciers\n",
-    "dMn_rivers[river_class==2.0] = 30  # continental, 30\n",
-    "dMn_rivers[river_class==3.0] = 100   # other"
+    "SPM_rivers[river_class==1.0] = SPM_factor*261e-6*multiplication_factor_glacial # glaciers\n",
+    "SPM_rivers[river_class==2.0] = SPM_factor*1.196e-5*multiplication_factor_continental  # continental\n",
+    "SPM_rivers[river_class==3.0] = SPM_factor*3.372e-6   # other\n",
+    "SPM_rivers[river_class==4.0] = SPM_factor*3.372e-6   # Gulf of Boothia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pMn_rivers[river_class==1.0] = 151*multiplication_factor_glacial # glaciers\n",
+    "pMn_rivers[river_class==2.0] = 13*multiplication_factor_continental  # continental\n",
+    "pMn_rivers[river_class==3.0] = 2   # other\n",
+    "pMn_rivers[river_class==4.0] = 2   # Gulf of Boothia"
    ]
   },
   {
@@ -111,24 +136,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pPb_rivers[river_class==1.0] = 5 # glaciers\n",
-    "pPb_rivers[river_class==2.0] = 1  # continental\n",
-    "pPb_rivers[river_class==3.0] = 0.2   # other"
+    "pPb_rivers[river_class==1.0] = 5*multiplication_factor_glacial # glaciers\n",
+    "pPb_rivers[river_class==2.0] = 1*multiplication_factor_continental  # continental\n",
+    "pPb_rivers[river_class==3.0] = 0.2   # other\n",
+    "pPb_rivers[river_class==4.0] = 0.2   # other"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dPb_rivers[river_class==1.0] = 35 # glaciers\n",
-    "dPb_rivers[river_class==2.0] = 43  # continental\n",
-    "dPb_rivers[river_class==3.0] = 2   # other"
+    "dPb_rivers[river_class==1.0] = 35*multiplication_factor_glacial # glaciers\n",
+    "dPb_rivers[river_class==2.0] = 43*multiplication_factor_continental  # continental\n",
+    "dPb_rivers[river_class==3.0] = 2   # other\n",
+    "dPb_rivers[river_class==4.0] = 2   # other"
    ]
   },
   {
@@ -140,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,26 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.64e-07\n",
+      "1.64e-07 0.0 2.0868923611111135e-10\n",
       "2.748550462722111e-06\n"
      ]
     }
    ],
    "source": [
-    "print(np.amax(dMn_rivers))\n",
+    "print(np.amax(dMn_rivers), np.amin(dMn_rivers), np.average(dMn_rivers))\n",
     "print(np.amax(pMn_rivers))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -225,16 +252,16 @@
        "<class 'netCDF4._netCDF4.Dimension'>: name = 'y', size = 2400"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20200114.nc', 'w', zlib=True)\n",
+    "ncd = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-best-guess-20201113.nc', 'w', zlib=True)\n",
     "# nc_tools.init_dataset_attrs(\n",
     "#     ncd,\n",
-    "#     title='Tracer input from rivers',\n",
+    "#     title='Tracer input from rivers',river-forcing-20200327-CAAriv.nc'\n",
     "#     notebook_name='rivers',\n",
     "#     nc_filepath='./river_input.nc',\n",
     "#     comment='Input of tracer concentration from rivers')\n",
@@ -245,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +291,7 @@
     "pmn_rivers.units = 'mol/L'\n",
     "pmn_rivers.long_name = 'Oxidised Mn concentration'  \n",
     "pmn_rivers.coordinates = 'nav_lon nav_lat'\n",
-    "pmn_rivers[:] = pMn_rivers\n",
+    "pmn_rivers[:] = SPM_rivers\n",
     "\n",
     "dmn_rivers = ncd.createVariable('dmn_rivers', 'float32', ('y','x'))\n",
     "dmn_rivers.units = 'mol/L'\n",
@@ -287,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,89 +322,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.64e-07\n",
-      "2.7485505e-06\n",
-      "4.3e-11\n",
-      "2.4131275e-08\n"
-     ]
-    }
-   ],
-   "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-base.nc','r')\n",
-    "print(np.amax(c.variables['dmn_rivers']))\n",
-    "print(np.amax(c.variables['pmn_rivers']))\n",
-    "print(np.amax(c.variables['dpb_rivers']))\n",
-    "print(np.amax(c.variables['ppb_rivers']))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Glacial river trace metal concentrations enhanced by 50\\%:"
+    "Check values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.46e-07\n",
-      "4.122826e-06\n",
-      "4.3e-11\n",
-      "2.4131275e-08\n"
+      "1.64e-07 4.5e-08 5e-09\n",
+      "0.000261 1.196e-05 3.372e-06\n"
      ]
     }
    ],
    "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-glacier.nc','r')\n",
-    "print(np.amax(c.variables['dmn_rivers']))\n",
-    "print(np.amax(c.variables['pmn_rivers']))\n",
-    "print(np.amax(c.variables['dpb_rivers']))\n",
-    "print(np.amax(c.variables['ppb_rivers']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Continental river trace metal concentration increased by 50\\%:"
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-base-20200826.nc','r')\n",
+    "a = np.array(c.variables['dmn_rivers'])\n",
+    "b = np.array(c.variables['pmn_rivers'])\n",
+    "print(np.amax(a[river_class==1.0]), np.amax(a[river_class==2.0]), np.amax(a[river_class==3.0]))\n",
+    "print(np.amax(b[river_class==1.0]), np.amax(b[river_class==2.0]), np.amax(b[river_class==3.0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.64e-07\n",
-      "2.7485505e-06\n",
-      "4.3e-11\n",
-      "2.4131275e-08\n"
+      "1.64e-07 3e-08 5e-09\n",
+      "0.000261 1.196e-05 3.372e-06\n"
      ]
     }
    ],
    "source": [
-    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-20191202-continental.nc','r')\n",
-    "print(np.amax(c.variables['dmn_rivers']))\n",
-    "print(np.amax(c.variables['pmn_rivers']))\n",
-    "print(np.amax(c.variables['dpb_rivers']))\n",
-    "print(np.amax(c.variables['ppb_rivers']))"
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-base-20201113.nc','r')\n",
+    "a = np.array(c.variables['dmn_rivers'])\n",
+    "b = np.array(c.variables['pmn_rivers'])\n",
+    "print(np.amax(a[river_class==1.0]), np.amax(a[river_class==2.0]), np.amax(a[river_class==3.0]))\n",
+    "print(np.amax(b[river_class==1.0]), np.amax(b[river_class==2.0]), np.amax(b[river_class==3.0]))"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-glacial-20201111.nc','r')\n",
+    "a = np.array(c.variables['dmn_rivers'])\n",
+    "b = np.array(c.variables['pmn_rivers'])\n",
+    "print(np.amax(a[river_class==1.0]), np.amax(a[river_class==2.0]), np.amax(a[river_class==3.0]))\n",
+    "print(np.amax(b[river_class==1.0]), np.amax(b[river_class==2.0]), np.amax(b[river_class==3.0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.64e-07 4.5e-08 5e-09\n",
+      "8.613e-05 5.9202e-06 1.11276e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/river-forcing-continental-20201111.nc','r')\n",
+    "a = np.array(c.variables['dmn_rivers'])\n",
+    "b = np.array(c.variables['pmn_rivers'])\n",
+    "print(np.amax(a[river_class==1.0]), np.amax(a[river_class==2.0]), np.amax(a[river_class==3.0]))\n",
+    "print(np.amax(b[river_class==1.0]), np.amax(b[river_class==2.0]), np.amax(b[river_class==3.0]))"
    ]
   },
   {
