--- a/forcing/rivers/river-contribution-estimate.ipynb
+++ b/forcing/rivers/river-contribution-estimate.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imin, imax = 1480, 2180\n",
+    "jmin, jmax = 160, 800"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,21 +54,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "c = nc.Dataset('/ocean/brogalla/GEOTRACES/data/runoff/'+ \\\n",
     "               'ANHA12_runoff_monthly_combined_Dai_Trenberth_Bamber_y2002.nc','r')\n",
-    "lon_rf = c.variables['nav_lon']\n",
-    "lat_rf = c.variables['nav_lat']\n",
-    "socoefr = c.variables['socoefr']\n",
-    "rf = c.variables['runoff'][month]"
+    "lon_rf  = np.array(c.variables['nav_lon'])\n",
+    "lat_rf  = np.array(c.variables['nav_lat'])\n",
+    "socoefr = np.array(c.variables['socoefr'])\n",
+    "rf = np.array(c.variables['runoff'][month])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.amax(socoefr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +95,45 @@
     "rf[rf == 0] = np.nan\n",
     "lon_rf[rf == 0.0] = np.nan\n",
     "lat_rf[rf == 0.0] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2400, 1632)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.055798575\n",
+      "0.001385977\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.nanmax(rf[1480:2180,160:800]))\n",
+    "print(np.nanmean(rf[1480:2180,160:800]))"
    ]
   },
   {
